# orbit-guard

./: .gitignore  Makefile.win  Project orbit guard.dev  README.md  compile_orbit_guard.bat  main.cpp
apps/leo-watch-api/: pyproject.toml
apps/leo-watch-api/orbitguard_api/: __init__.py  celestrak.py  config.py  main.py  models.py  orbits.py  risk.py  store.py
apps/leo-watch-api/tests/: test_api_events.py  test_celestrak.py  test_models.py  test_orbits.py  test_risk.py  test_status.py
apps/leo-watch-dashboard/: index.html  package-lock.json  package.json  vite.config.ts
apps/leo-watch-dashboard/src/: App.test.tsx  App.tsx  EarthView.test.tsx  EarthView.tsx  api.ts  styles.css  types.ts
data/snapshots/: leo-watch-snapshot.json
docs/: leo-watch-local-demo.md
docs/superpowers/mockups/: 2026-05-21-space-background-options.html
docs/superpowers/plans/: 2026-05-20-mission-center.md  2026-05-21-space-simulator-modes.md  2026-05-26-physics-driven-orbits.md  2026-05-29-leo-public-risk-dashboard.md
docs/superpowers/specs/: 2026-05-20-mission-center-design.md  2026-05-21-space-simulator-modes-design.md  2026-05-26-physics-driven-orbits-design.md  (+1 more)
include/: orbit_guard.h
src/: earth_events.cpp  mission.cpp  risk.cpp  ship_modes.cpp  simulation.cpp  ui.cpp
tests/: earth_event_flow_smoke.cpp  earth_event_smoke.cpp  escape_navigation_smoke.cpp  mission_state_smoke.cpp  orbit_layer_smoke.cpp  physics_orbit_smoke.cpp  player_satellite_smoke.cpp  risk_prediction_smoke.cpp  risk_scope_smoke.cpp  ship_state_smoke.cpp
tools/: sign-local.ps1
